# izilang

./: .clang-format  .clangd  .gitignore  ANALYSIS.md  ANALYSIS_SUMMARY.md  BREAK_CONTINUE_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  CODEBASE_ANALYSIS.md  COLLECTIONS_ENHANCEMENTS.md  CONTRIBUTING.md  CONTRIBUTING_V03.md  ERROR_SYSTEM.md  FEATURES.md  FEATURE_INVENTORY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPORT_SYSTEM_SUMMARY.md  LANGUAGE_MANIFESTO.md  MODULE_SYSTEM.md  MODULE_SYSTEM_IMPLEMENTATION.md  Makefile  NEXT_STEPS.md  OOP_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PACKAGE_MODULE_IMPLEMENTATION.md  PATTERN_MATCHING_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PROBLEMS.md  README.md  RUNTIME_HARDENING_SUMMARY.md  STANDARD_LIBRARY.md  STANDARD_LIBRARY_SUMMARY.md  TESTING.md  TOOLING_SUMMARY.md  TRY_CATCH_FINALLY_IMPLEMENTATION.md  V03_IMPLEMENTATION_STATUS.md  V03_SUMMARY.md  V1_ANALYSIS_COMPLETION.md  (+78 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  code-quality.yml  deploy-playground.yml  release.yml
benchmarks/: README.md  arithmetic.iz  arrays.iz  bench.sh  benchmark_results.txt  functions.iz  loops.iz  run_benchmarks.sh
docs/: ANALYSIS.md  CLI_APP_TUTORIAL.md  CLI_REFERENCE.md  CONCURRENCY.md  COOKBOOK.md  DECISIONS.md  EDITOR_SETUP.md  ERRORS_TROUBLESHOOTING.md  GETTING_STARTED.md  IPC.md  LANGUAGE_SPEC.md  LSP_SERVER.md  MIGRATION_V03.md  MIGRATION_V04.md  MODULE_SYSTEM.md  PACKAGE_MANAGER.md  ROADMAP.md  RUNTIME_HARDENING.md  STANDARD_LIBRARY.md  STATUS.md  TUTORIAL.md  V0.1_COMPLETION_REPORT.md  V03_SPECIFICATION.md  VM_PARITY_CHECKLIST.md  WEB_PLAYGROUND.md
docs/stdlib/: README.md  array.md  (+13 more)
examples/: README_COMPILE.md  README_INTERPOLATION.md  bytecode_chunk_demo.iz  collections_demo.iz  compile_example.iz  demo_assert.iz  demo_async.iz  demo_audio.iz  demo_collections.iz  demo_concurrency.iz  demo_gradual_typing.iz  demo_http.iz  demo_image.iz  demo_ipc.iz  demo_nullish_coalescing.iz  demo_oop_complete.iz  demo_std_env.iz  demo_std_fs.iz  demo_std_process.iz  demo_ui.iz  demo_ui_advanced.iz  demo_ui_vm.iz  demo_window.iz  module_demo.iz  pattern_matching_demo.iz  string_interpolation.iz  ui_panels.izi
playground/: README.md
src/: main.cpp
std/: array.iz  io.iz  math.iz  string.iz
tests/: Makefile  catch.hpp  math.iz  mod.iz  test.iz  test_ast_printer.cpp  test_async.cpp  test_audio.cpp  test_classes.cpp  test_collections.cpp  test_diagnostics.cpp  test_error_system.cpp  test_first_class_functions.cpp  test_formatter.cpp  test_http.cpp  test_image.cpp  test_integration.cpp  test_ipc.cpp  test_lexer.cpp  test_macros.cpp  test_math_import.iz  test_modules.cpp  test_multilevel_fields.iz  test_net.cpp  test_nullish_coalescing.cpp  test_oop_inheritance.iz  test_optimizer.cpp  test_optional_semicolons.cpp  test_parser.cpp  test_pattern_matching.cpp  test_pkg.sh  test_process.cpp  test_relative_imports.cpp  test_semantic_analysis.cpp  test_simple_inherit.iz  test_std_fs.iz  test_stdlib_comprehensive.iz  test_ternary_operator.cpp  test_try_catch.cpp  test_value.cpp  (+6 more)
(+107 files in other folders)
